--- a/maps/jelajah-sabang-aceh/index.html
+++ b/maps/jelajah-sabang-aceh/index.html
@@ -155,7 +155,7 @@
 								<!-- Maps and media injected here -->
 							</div>
 							<div id="mainStageLoadingIndicator" class="loadingIndicator" role="alert" aria-live="polite">
-							  <img class="loadingGif" src="https://cdn.rawgit.com/rifkifau/spasialkan/438b1cc2/maps/jelajah-sabang-aceh/resources/tpl/viewer/icons/loading-light.gif"/>
+							  <img class="loadingGif" src="resources/tpl/viewer/icons/loading-light.gif"/>
 							</div>
 							<!-- Back button -->
 							<div class="mediaBackContainer">
@@ -320,7 +320,7 @@
 
 		<div id="loadingOverlay"></div>
 		<div id="loadingIndicator" class="loadingIndicator" role="alert" aria-live="polite">
-			<img class="loadingGif" src="https://cdn.rawgit.com/rifkifau/spasialkan/438b1cc2/maps/jelajah-sabang-aceh/resources/tpl/viewer/icons/loading-light.gif"/>
+			<img class="loadingGif" src="resources/tpl/viewer/icons/loading-light.gif"/>
 		</div>
 		<div id="loadingMessage"></div>
 
@@ -345,6 +345,6 @@
 
 		<div class="print-warning"></div>
 
-		<script type="text/javascript" src="https://cdn.rawgit.com/rifkifau/spasialkan/438b1cc2/maps/jelajah-sabang-aceh/app/main-config.js"></script>
+		<script type="text/javascript" src="app/main-config.js"></script>
 	</body>
 </html>
