--- a/cartogram/index.html
+++ b/cartogram/index.html
@@ -11,7 +11,7 @@
     <style>
         html, body, #kartogram {
             width: 100%;
-            height: 100%
+            height: auto
         }
         .info {
             padding: 6px 8px;
