--- a/cartogram/index.html
+++ b/cartogram/index.html
@@ -9,9 +9,19 @@
     <script src="src/leaflet.js"></script>
     <link rel="stylesheet" href="src/leaflet.css">
     <style>
-        html, body, #kartogram {
+        html, body {
             width: 100%;
-            height: auto
+            height: 100%;
+            padding: 0;
+            margin: 0;
+        }
+        #kartogram {
+            width: 100%;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            padding: 0;
+            margin: 0;
         }
         .info {
             padding: 6px 8px;
