--- a/cartogram/index.html
+++ b/cartogram/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" type="image/x-icon" href="https://rifkifau.github.io/assets/img/logor.png" />
     <title>Cartogram - Visualisasi Demografi Bali</title>
     <script src="src/jquery-3.3.1.js"></script>
     <script src="src/leaflet.js"></script>
