--- a/cartogram/index.html
+++ b/cartogram/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/x-icon" href="https://rifkifau.github.io/assets/img/logor.png" />
     <title>Cartogram - Visualisasi Demografi Bali</title>
+    <meta name="description" content="Visualisasi Kartogram dengan Web GIS Leaflet">
+	<meta name="author" content="Rifki Fauzi">
+    <meta name="keywords" content="webgis, visualisasi, leaflet, kartogram, web gis">
     <script src="src/jquery-3.3.1.js"></script>
     <script src="src/leaflet.js"></script>
     <link rel="stylesheet" href="src/leaflet.css">
@@ -37,6 +40,16 @@
             color: #777;
         }
     </style>
+    
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122965748-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-122965748-1');
+</script>
+    
 </head>
 <body>
     <div id="kartogram"></div>
